add bibliometric paper as reference
It is stated that several publication on the PD happen every year.
The reference backs up the statement

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -621,6 +621,15 @@ author = "J. H. Miller"
   year={2015},
   publisher={IEEE}
 }
+@misc{Glynatsi2019,
+    title={A bibliometric study of research topics, collaboration and influence
+    in the field of the Iterated Prisoner's Dilemma},
+    author={Nikoleta E. Glynatsi and Vincent A. Knight},
+    year={2019},
+    eprint={1911.06128},
+    archivePrefix={arXiv},
+    primaryClass={physics.soc-ph}
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @article{scikit-learn,
  title={Scikit-learn: Machine Learning in {P}ython},
