--- a/paper/main.tex
+++ b/paper/main.tex
@@ -137,7 +137,7 @@ trained strategies based on lookup tables~\cite{Axelrod1987}, hidden markov
 models~\cite{Harper2017} and finite state automata~\cite{Miller1996}.
 
 Though only a select pieces of work have been discussed, the IPD literature is
-rich, and new strategies and competitions are being published every year. The
+rich, and new strategies and competitions are being published every year~\cite{Glynatsi2019}. The
 question, however, still remains the same: what is the best way to play the
 game? Compared to other works, whereas a few selected strategies are evaluated
 on a small number of tournaments, this manuscript evaluates the performance of \numberofstrategies
